# gd32e51x-cmake-vscode

./: README.md
Drivers/BSP/GD32E513Z_EVAL/: gd32e513z_eval.c  gd32e513z_eval.h
Drivers/BSP/GD32E517R_START/: gd32e517r_start.c  gd32e517r_start.h
Drivers/BSP/GD32E517V_START/: gd32e517v_start.c  gd32e517v_start.h
Drivers/BSP/GD32E517Z_EVAL/: gd32e517z_eval.c  gd32e517z_eval.h  gd32e517z_lcd_eval.c  gd32e517z_lcd_eval.h  lcd_font.h
Drivers/BSP/GD32E518C_START/: gd32e518c_start.c  gd32e518c_start.h
Drivers/GD32E51x_standard_peripheral/Include/: gd32e51x_adc.h  gd32e51x_bkp.h  gd32e51x_can.h  gd32e51x_cmp.h  gd32e51x_crc.h  gd32e51x_ctc.h  gd32e51x_dac.h  gd32e51x_dbg.h  gd32e51x_dma.h  gd32e51x_enet.h  gd32e51x_exmc.h  gd32e51x_exti.h  gd32e51x_fmc.h  gd32e51x_fwdgt.h  gd32e51x_gpio.h  gd32e51x_i2c.h  gd32e51x_misc.h  gd32e51x_pmu.h  gd32e51x_rcu.h  gd32e51x_rtc.h  gd32e51x_sdio.h  gd32e51x_shrtimer.h  gd32e51x_spi.h  gd32e51x_sqpi.h  gd32e51x_timer.h  gd32e51x_tmu.h  gd32e51x_usart.h  gd32e51x_wwdgt.h
Drivers/GD32E51x_standard_peripheral/Source/: gd32e51x_adc.c  gd32e51x_bkp.c  gd32e51x_can.c  gd32e51x_cmp.c  gd32e51x_crc.c  gd32e51x_ctc.c  gd32e51x_dac.c  gd32e51x_dbg.c  gd32e51x_dma.c  gd32e51x_enet.c  gd32e51x_exmc.c  gd32e51x_exti.c  gd32e51x_fmc.c  gd32e51x_fwdgt.c  gd32e51x_gpio.c  gd32e51x_i2c.c  gd32e51x_misc.c  gd32e51x_pmu.c  gd32e51x_rcu.c  gd32e51x_rtc.c  gd32e51x_sdio.c  gd32e51x_shrtimer.c  gd32e51x_spi.c  gd32e51x_sqpi.c  gd32e51x_timer.c  gd32e51x_tmu.c  gd32e51x_usart.c  gd32e51x_wwdgt.c
Examples/ADC/ADC0_ADC1_regular_parallel/: .source_project
Examples/ADC/ADC0_SHRTIMER_trigger_inserted_channel/: .source_project
Examples/ADC/ADC0_channel_differential_mode/: .source_project
Examples/ADC/ADC0_regular_channel_discontinuous_mode/: .source_project
Examples/ADC/ADC0_regular_channel_with_DMA/: .source_project
Examples/ADC/ADC0_software_trigger_regular_channel_polling/: .source_project
Examples/ADC/ADC0_temperature_Vref/: .source_project
Examples/ADC/ADC0_timer_trigger_inserted_channel/: .source_project
Examples/ADC/ADC1_analog_watchdog_0/: .source_project
Examples/ADC/ADC1_analog_watchdog_1/: .source_project
Examples/ADC/ADC1_oversample_shift/: .source_project
Examples/ADC/ADC1_resolution/: .source_project
Examples/BKP/Backup_data/: .source_project
Examples/BKP/Tamper/: .source_project
Examples/CAN/communication_FDmode/: .source_project
Examples/CAN/communication_Loopback/: .source_project
Examples/CAN/communication_classical_CAN/: .source_project
Examples/CMP/Blanking_output/: .source_project
Examples/CMP/Port_output/: .source_project  GD32E51x_CL.svd
Examples/CMP/Timer0_CH0IC/: .source_project
Examples/CRC/CRC_calculate/: .source_project
Examples/CTC/CTC_gpio/: .source_project
Examples/USBD/cdc_acm/Drivers/BSP/GD32E513Z_EVAL/: CMakeLists.txt
Examples/USBD/cdc_acm/Drivers/GD32E51x_usbd_library/: CMakeLists.txt
Examples/USBHS/usb_host/usb_host_cdc/Drivers/GD32E51x_usbhs_library/: CMakeLists.txt
Template/: .source_project  CMakeLists.txt
(+1075 files in other folders)
